test/libhyperion/semanticTests/errors/via_contract_type.hyp
contract A {
  error E(uint);
}
contract X {
  error E(string);
}
contract B is A {
  function f() public pure { revert E(1); }
  function g() public pure  { revert A.E(1); }
  function h() public pure { revert X.E("abc"); }

}
// ----
// f() -> FAILURE, hex"002ff067", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001"
// g() -> FAILURE, hex"002ff067", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001"
// h() -> FAILURE, hex"3e9992c9", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000040", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003", hex"61626300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"
